--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "stylelint": "gulp lint",
     "e2e": "gulp e2e",
     "deploy": "firebase deploy",
-    "webdriver-manager": "webdriver-manager"
+    "webdriver-manager": "webdriver-manager",
+    "docs": "gulp docs",
+    "api": "gulp api"
   },
   "version": "2.0.0-alpha.9-3",
   "license": "MIT",
@@ -23,14 +25,14 @@
     "node": ">= 4.2.1 < 5"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
-    "@angular/router": "^3.0.0",
+    "@angular/common": "^2.2.0",
+    "@angular/compiler": "^2.2.0",
+    "@angular/core": "^2.2.0",
+    "@angular/forms": "^2.2.0",
+    "@angular/http": "^2.2.0",
+    "@angular/platform-browser": "^2.2.0",
+    "@angular/platform-browser-dynamic": "^2.2.0",
+    "@angular/router": "^3.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "5.0.0-beta.12",
@@ -38,8 +40,8 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.1.1",
-    "@angular/platform-server": "^2.0.0",
+    "@angular/compiler-cli": "^2.2.1",
+    "@angular/platform-server": "^2.2.0",
     "@types/glob": "^5.0.29",
     "@types/gulp": "^3.8.29",
     "@types/hammerjs": "^2.0.30",
@@ -48,7 +50,7 @@
     "@types/minimist": "^1.1.28",
     "@types/node": "^6.0.34",
     "@types/run-sequence": "0.0.27",
-    "browserstacktunnel-wrapper": "^1.4.2",
+    "@types/rx": "^2.0.0",
     "conventional-changelog": "^1.1.0",
     "express": "^4.14.0",
     "firebase-tools": "^2.2.1",
@@ -83,8 +85,10 @@
     "strip-ansi": "^3.0.0",
     "stylelint": "^6.9.0",
     "symlink-or-copy": "^1.0.1",
+    "travis-after-modes": "0.0.5",
     "ts-node": "^0.7.3",
     "tslint": "^3.13.0",
+    "typedoc": "0.5.1",
     "typescript": "^2.0.2",
     "typings": "^1.3.1",
     "which": "^1.2.4"
