--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "url": "https://github.com/angular/material2.git"
   },
   "scripts": {
+    "start": "webpack-dev-server --hot --inline --port 8080",
+    "webpack-dev": "set NODE_ENV=development && webpack",
+    "webpack-production": "set NODE_ENV=production && webpack",
+
     "build": "gulp build",
     "demo-app": "gulp serve:devapp",
     "test": "gulp test",
@@ -25,19 +29,21 @@
     "node": ">= 4.2.1 < 5"
   },
   "dependencies": {
-    "@angular/common": "^2.2.0",
-    "@angular/compiler": "^2.2.0",
-    "@angular/core": "^2.2.0",
-    "@angular/forms": "^2.2.0",
-    "@angular/http": "^2.2.0",
-    "@angular/platform-browser": "^2.2.0",
-    "@angular/platform-browser-dynamic": "^2.2.0",
-    "@angular/router": "^3.2.0",
+    "@angular/common": "4.0.0-rc.3",
+    "@angular/compiler": "4.0.0-rc.3",
+    "@angular/core": "4.0.0-rc.3",
+    "@angular/forms": "4.0.0-rc.3",
+    "@angular/http": "4.0.0-rc.3",
+    "@angular/platform-browser": "4.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "4.0.0-rc.3",
+    "@angular/router": "4.0.0-rc.3",
+    "@angular/upgrade": "4.0.0-rc.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.38",
-    "zone.js": "^0.6.23"
+    "reflect-metadata": "0.1.9",    
+    "rxjs": "5.2.0",
+    "systemjs": "0.20.10",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.2.1",
@@ -51,7 +57,14 @@
     "@types/node": "^6.0.34",
     "@types/run-sequence": "0.0.27",
     "@types/rx": "^2.0.0",
+    "angular2-template-loader": "0.6.0",
+    "angular-router-loader": "^0.5.0",
+    "awesome-typescript-loader": "3.0.4",
+    "clean-webpack-plugin": "^0.1.15",
     "conventional-changelog": "^1.1.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
     "express": "^4.14.0",
     "firebase-tools": "^2.2.1",
     "fs-extra": "^0.26.5",
@@ -65,7 +78,9 @@
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
+    "html-webpack-plugin": "^2.26.0",
     "jasmine-core": "^2.4.1",
+    "json-loader": "^0.5.4",
     "karma": "^1.1.1",
     "karma-browserstack-launcher": "^1.0.1",
     "karma-chrome-launcher": "^1.0.1",
@@ -75,22 +90,31 @@
     "madge": "^0.6.0",
     "merge2": "^1.0.2",
     "minimist": "^1.2.0",
-    "node-sass": "^3.4.2",
+    "node-sass": "^4.5.0",
     "protractor": "^4.0.8",
     "protractor-accessibility-plugin": "0.1.1",
+    "raw-loader": "^0.5.1",
     "resolve-bin": "^0.4.0",
     "rollup": "^0.34.13",
     "run-sequence": "^1.2.2",
     "sass": "^0.5.0",
+    "sass-loader": "^6.0.3",
+    "source-map-loader": "^0.2.0",
     "strip-ansi": "^3.0.0",
     "stylelint": "^6.9.0",
+    "style-loader": "^0.13.1",
     "symlink-or-copy": "^1.0.1",
     "travis-after-modes": "0.0.5",
+    "ts-helpers": "^1.1.2",
     "ts-node": "^0.7.3",
-    "tslint": "^3.13.0",
+    "tslint": "^4.5.1",
+    "tslint-loader": "^3.4.3",
     "typedoc": "0.5.1",
-    "typescript": "^2.0.2",
+    "typescript": "^2.2.1",
     "typings": "^1.3.1",
-    "which": "^1.2.4"
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "2.4.2",
+    "which": "^1.2.12"
   }
 }
