--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 # compiled output
 /dist
 /tmp
-/typings
 /deploy
+/screenshots
 
 # dependencies
-/node_modules
+node_modules
 /bower_components
 
 # Dart
@@ -24,6 +24,7 @@
 # IDEs
 /.idea
 /.vscode
+/.vs
 
 # misc
 .DS_Store
