--- a/package.json
+++ b/package.json
@@ -1,120 +1,120 @@
 {
-  "name": "material2",
-  "description": "Material Design components for Angular 2",
-  "homepage": "",
-  "bugs": "",
+  "name": "material2-srcs",
+  "description": "Material Design components for Angular",
+  "homepage": "https://github.com/angular/material2",
+  "bugs": "https://github.com/angular/material2/issues",
   "repository": {
     "type": "git",
     "url": "https://github.com/angular/material2.git"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot --inline --port 8080",
-    "webpack-dev": "set NODE_ENV=development && webpack",
-    "webpack-production": "set NODE_ENV=production && webpack",
-
-    "build": "gulp build",
+    "build": "gulp material:build-release:clean",
     "demo-app": "gulp serve:devapp",
     "test": "gulp test",
     "tslint": "gulp lint",
     "stylelint": "gulp lint",
     "e2e": "gulp e2e",
-    "deploy": "firebase deploy",
+    "deploy": "gulp deploy:devapp",
     "webdriver-manager": "webdriver-manager",
     "docs": "gulp docs",
-    "api": "gulp api"
+    "api": "gulp api-docs"
   },
-  "version": "2.0.0-alpha.9-3",
+  "version": "2.0.0-beta.6",
   "license": "MIT",
   "engines": {
-    "node": ">= 4.2.1 < 5"
+    "node": ">= 5.4.1 < 7"
   },
   "dependencies": {
-    "@angular/common": "4.0.0-rc.3",
-    "@angular/compiler": "4.0.0-rc.3",
-    "@angular/core": "4.0.0-rc.3",
-    "@angular/forms": "4.0.0-rc.3",
-    "@angular/http": "4.0.0-rc.3",
-    "@angular/platform-browser": "4.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "4.0.0-rc.3",
-    "@angular/router": "4.0.0-rc.3",
-    "@angular/upgrade": "4.0.0-rc.3",
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
     "core-js": "^2.4.1",
-    "hammerjs": "^2.0.8",
-    "reflect-metadata": "0.1.9",    
-    "rxjs": "5.2.0",
-    "systemjs": "0.20.10",
+    "rxjs": "^5.0.1",
+    "systemjs": "0.19.43",
+    "tslib": "^1.7.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.2.1",
-    "@angular/platform-server": "^2.2.0",
-    "@types/glob": "^5.0.29",
-    "@types/gulp": "^3.8.29",
-    "@types/hammerjs": "^2.0.30",
-    "@types/jasmine": "^2.2.31",
-    "@types/merge2": "0.0.28",
-    "@types/minimist": "^1.1.28",
-    "@types/node": "^6.0.34",
-    "@types/run-sequence": "0.0.27",
-    "@types/rx": "^2.0.0",
-    "angular2-template-loader": "0.6.0",
-    "angular-router-loader": "^0.5.0",
-    "awesome-typescript-loader": "3.0.4",
-    "clean-webpack-plugin": "^0.1.15",
-    "conventional-changelog": "^1.1.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.9.0",
-    "express": "^4.14.0",
-    "firebase-tools": "^2.2.1",
-    "fs-extra": "^0.26.5",
-    "glob": "^6.0.4",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "@google-cloud/storage": "^1.1.1",
+    "@types/chalk": "^0.4.31",
+    "@types/fs-extra": "^3.0.1",
+    "@types/glob": "^5.0.30",
+    "@types/gulp": "3.8.32",
+    "@types/hammerjs": "^2.0.34",
+    "@types/jasmine": "2.5.45",
+    "@types/merge2": "^0.3.30",
+    "@types/minimist": "^1.2.0",
+    "@types/node": "^7.0.21",
+    "@types/run-sequence": "^0.0.29",
+    "@types/rx": "2.5.33",
+    "autoprefixer": "^6.7.6",
+    "axe-core": "^2.2.1",
+    "axe-webdriverjs": "^1.1.1",
+    "chalk": "^1.1.3",
+    "conventional-changelog": "^1.1.3",
+    "dgeni": "^0.4.7",
+    "dgeni-packages": "^0.19.1",
+    "firebase": "^4.0.0",
+    "firebase-admin": "^5.0.0",
+    "firebase-tools": "^3.9.0",
+    "fs-extra": "^3.0.1",
+    "glob": "^7.1.2",
+    "google-closure-compiler": "^20170218.0.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
     "gulp-clean": "^0.3.2",
-    "gulp-cli": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-server-livereload": "^1.8.2",
-    "gulp-shell": "^0.5.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.6",
-    "html-webpack-plugin": "^2.26.0",
-    "jasmine-core": "^2.4.1",
-    "json-loader": "^0.5.4",
-    "karma": "^1.1.1",
-    "karma-browserstack-launcher": "^1.0.1",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-sauce-launcher": "^1.0.0",
-    "madge": "^0.6.0",
-    "merge2": "^1.0.2",
+    "gulp-clean-css": "^3.3.1",
+    "gulp-cli": "^1.3.0",
+    "gulp-connect": "^5.0.0",
+    "gulp-dom": "^0.9.17",
+    "gulp-flatten": "^0.3.1",
+    "gulp-highlight-files": "^0.0.4",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-markdown": "^1.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-transform": "^2.0.0",
+    "hammerjs": "^2.0.8",
+    "highlight.js": "^9.11.0",
+    "http-rewrite-middleware": "^0.1.6",
+    "image-diff": "^1.6.3",
+    "jasmine-core": "^2.6.2",
+    "jsonwebtoken": "^7.4.1",
+    "karma": "^1.7.0",
+    "karma-browserstack-launcher": "^1.2.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-sauce-launcher": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "madge": "^1.6.0",
+    "merge2": "^1.0.3",
     "minimist": "^1.2.0",
-    "node-sass": "^4.5.0",
-    "protractor": "^4.0.8",
-    "protractor-accessibility-plugin": "0.1.1",
-    "raw-loader": "^0.5.1",
+    "node-sass": "^4.5.3",
+    "protractor": "^5.1.2",
+    "request": "^2.81.0",
     "resolve-bin": "^0.4.0",
-    "rollup": "^0.34.13",
+    "rollup": "^0.41.6",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "run-sequence": "^1.2.2",
-    "sass": "^0.5.0",
-    "sass-loader": "^6.0.3",
-    "source-map-loader": "^0.2.0",
-    "strip-ansi": "^3.0.0",
-    "stylelint": "^6.9.0",
-    "style-loader": "^0.13.1",
-    "symlink-or-copy": "^1.0.1",
-    "travis-after-modes": "0.0.5",
-    "ts-helpers": "^1.1.2",
-    "ts-node": "^0.7.3",
-    "tslint": "^4.5.1",
-    "tslint-loader": "^3.4.3",
-    "typedoc": "0.5.1",
-    "typescript": "^2.2.1",
-    "typings": "^1.3.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "2.4.2",
-    "which": "^1.2.12"
+    "scss-bundle": "^2.0.1-beta.7",
+    "selenium-webdriver": "^3.4.0",
+    "sorcery": "^0.10.0",
+    "stylelint": "^7.10.1",
+    "ts-node": "^3.0.4",
+    "tsconfig-paths": "^2.2.0",
+    "tslint": "^5.2.0",
+    "typescript": "~2.2.1",
+    "uglify-js": "^2.8.14",
+    "web-animations-js": "^2.2.5"
   }
 }
